--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Suwaid Aslam
 email: suwaidaslam@gmail.com
 url: https://github.com/SuwaidAslam
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+keywords: "Portfolio, Developer, C++ Developer, data scientist, Machine learning, Engineer, Software Engineer, Programmer, Linkdin, Github, stackoverflow"
+skills: "Data Scientist - Machine Learning Engineer - C++ Developer"
+meta_author: Aslam Suwaid
 
 # Google webmaster tools
 google_verify:
