--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ social:
     url: https://www.facebook.com/suwaid0aslam
   - title: stack-overflow
     url: https://stackoverflow.com/users/10910070/suwaid-aslam
-  - title: linkdin
+  - title: linkedin
     url: https://www.linkedin.com/in/muhammad-suwaid-aslam/
   - title: github
     url: https://github.com/SuwaidAslam
